@@ -1,3 +1,5 @@
+* BUG#6350 Correction du crash lors de la création d'une période d'indémnisation depuis l'assistant de création
+
 Version 1.12 - 2017-04-28
 
 Version 1.10 - 2016-11-02
