@@ -1,3 +1,5 @@
+* BUG#6350 Fix crash when creating indemnification period with the wizard
+
 Version 1.12 - 2017-04-28
 
 Version 1.10 - 2016-11-02
